--- a/Text/quali.tex
+++ b/Text/quali.tex
@@ -421,14 +421,15 @@ Without their work, many times thankless, this research would not be possible.
 
 \pagestyle{appendix} % repete o anterior, caso você não use apêndices
 
-%\annex
+\annex
 
 % \addappheadtotoc acrescenta a palavra "Anexo" ao sumário; se
 % só há anexos, sem apêndices, provavelmente não é necessário.
-%\addappheadtotoc
+\addappheadtotoc
 %
-%\input{conteudo/anexo-exemplo-faq}
-%\par
+\input{conteudo/anexoA}
+\input{conteudo/anexoB}
+\par
 
 
 %%%%%%%%%%%%%%% SEÇÕES FINAIS (BIBLIOGRAFIA E ÍNDICE REMISSIVO) %%%%%%%%%%%%%%%%
