--- a/Text/bibliografia.bib
+++ b/Text/bibliografia.bib
@@ -104,6 +104,26 @@
   year    = {2018}
 }
 
+@inproceedings{lattner2004llvm,
+  title        = {LLVM: A compilation framework for lifelong program analysis \& transformation},
+  author       = {Lattner, Chris and Adve, Vikram},
+  booktitle    = {International symposium on code generation and optimization, 2004. CGO 2004.},
+  pages        = {75--86},
+  year         = {2004},
+  organization = {IEEE}
+}
+
+@article{cooper2005acme,
+  title     = {ACME: adaptive compilation made efficient},
+  author    = {Cooper, Keith D and Grosul, Alexander and Harvey, Timothy J and Reeves, Steven and Subramanian, Devika and Torczon, Linda and Waterman, Todd},
+  journal   = {ACM SIGPLAN Notices},
+  volume    = {40},
+  number    = {7},
+  pages     = {69--77},
+  year      = {2005},
+  publisher = {ACM New York, NY, USA}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @Manual{CORBA:spec,
